--- a/WD-400/html/basics/inline-elements.html
+++ b/WD-400/html/basics/inline-elements.html
@@ -18,7 +18,7 @@
         <em>italic consectetur adipisicing elit. italic</em> Necessitatibus modi numquam dolorem ut sint et.</p>
     <p>The <abbr title="Overland Park Convention Center">OPCC</abbr> (hover over abbreviation) will be having a convention soon.</p>
     <p>They will be discussing <dfn title="food items">comestibles</dfn> (hover over defined term) <img src="https://image.freepik.com/iconos-gratis/comestibles_318-110827.jpg" alt="Comestibles"> at the convention.</p>
-    <p>Here is the favicon I use: <img src="../images/favicon-dh.ico" alt="My favicon"></p>
+    <p>Here is the favicon I use: <img src="../img/favicon-dh.ico" alt="My favicon"></p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione unde quasi et
         fugiat! <br> Do you like the way that aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> the <sub>sub</sub> tag and aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> the <sup>sup</sup> tag aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> styles text? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione unde quasi
         et fugiat!<br>
