--- a/WD-400/html/index.html
+++ b/WD-400/html/index.html
@@ -28,9 +28,20 @@
             <li><a href="html/character-entities.html">Character entities</a></li>
             <li><a href="html/black-goose-blog.txt">Black goose blog text</a></li>
             <li><a href="html/black-goose-blog.html">Black goose blog - formatted</a></li>
-            <li></li>
-            <li></li>
+            <li><a href="html/links-basic.html">Basic links</a></li>
+            <li><a href="html/iframes.html">iframes</a></li>
         </ul>
+        <li>Images</li>
+        <ul>
+            <li><a href="images/font-awesome.html">Font Awesome</a></li>
+            <li><a href="images/svg/icon-paths.html">SVG raw icon paths</a></li>
+            <li><a href="images/svg/material-design-icons.html">SVG icons - Material Design</a></li>
+        </ul>
+        <li>Fonts</li>
+        <ul>
+            <li><a href="fonts/material-design-icons.html">Font Icons - Material Design</a></li>
+        </ul>
+
     </ul>
 </body>
 
