--- a/WD-400/html/index.html
+++ b/WD-400/html/index.html
@@ -41,6 +41,10 @@
         <ul>
             <li><a href="fonts/material-design-icons.html">Font Icons - Material Design</a></li>
         </ul>
+        <li>Text</li>
+        <ul>
+            <li><a href="text/centered.html">Centered text</a></li>
+        </ul>
 
     </ul>
 </body>
