--- a/WD-400/html/index.html
+++ b/WD-400/html/index.html
@@ -41,6 +41,11 @@
         <ul>
             <li><a href="fonts/material-design-icons.html">Font Icons - Material Design</a></li>
         </ul>
+        <li>Forms</li>
+        <ul>
+            <li><a href="forms/google-query-hidden.html">Google query with languages</a></li>
+            <li><a href="forms/labels-right.html">Right-aligned labels</a></li>
+        </ul>
         <li>Text</li>
         <ul>
             <li><a href="text/centered.html">Centered text</a></li>
