--- a/WD-400/html/index.html
+++ b/WD-400/html/index.html
@@ -50,6 +50,12 @@
         <ul>
             <li><a href="text/centered.html">Centered text</a></li>
         </ul>
+        <li>Layouts</li>
+        <ul>
+            <li><a href="layouts/grid.html">Grid layout</a></li>
+            <li><a href="layouts/flexbox.html">Flexbox</a></li>
+            <li><a href="layouts/multi-column.html">Multi-column text with LESS</a></li>
+        </ul>
 
     </ul>
 </body>
