--- a/WD-400/html/index.html
+++ b/WD-400/html/index.html
@@ -23,33 +23,44 @@
             <li><a href="basics/block-elements-layout.html">Block elements - layout</a></li>
             <li><a href="basics/inline-elements.html">Inline elements</a></li>
         </ul>
+
         <li>HTML</li>
         <ul>
             <li><a href="html/character-entities.html">Character entities</a></li>
             <li><a href="html/black-goose-blog.txt">Black goose blog text</a></li>
-            <li><a href="html/black-goose-blog.html">Black goose blog - formatted</a></li>
+            <li><a href="html/black-goose-blog.html">Black goose blog - marked up</a></li>
             <li><a href="html/links-basic.html">Basic links</a></li>
             <li><a href="html/iframes.html">iframes</a></li>
         </ul>
+
         <li>Images</li>
         <ul>
             <li><a href="images/font-awesome.html">Font Awesome</a></li>
             <li><a href="images/svg/icon-paths.html">SVG raw icon paths</a></li>
             <li><a href="images/svg/material-design-icons.html">SVG icons - Material Design</a></li>
         </ul>
+
+        <li>CSS3 basics</li>
+        <ul>
+            <li><a href="css3/black-goose-blog-styled.html">Black goose blog - styled</a></li>
+        </ul>
+
         <li>Fonts</li>
         <ul>
             <li><a href="fonts/material-design-icons.html">Font Icons - Material Design</a></li>
         </ul>
+
         <li>Forms</li>
         <ul>
             <li><a href="forms/google-query-hidden.html">Google query with languages</a></li>
             <li><a href="forms/labels-right.html">Right-aligned labels</a></li>
         </ul>
+
         <li>Text</li>
         <ul>
             <li><a href="text/centered.html">Centered text</a></li>
         </ul>
+
         <li>Layouts</li>
         <ul>
             <li><a href="layouts/grid.html">Grid layout</a></li>
