--- a/WD-400/html/forms/labels-right.html
+++ b/WD-400/html/forms/labels-right.html
@@ -7,13 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        div.field {
+        .labeled-field {
             margin: 0;
             padding: 0;
             padding-bottom: 1.25em;
         }
         
-        div.field label {
+        .labeled-field label {
             display: inline-block;
             width: 140px;
             text-align: right;
@@ -42,11 +42,11 @@
 
 <body>
     <form>
-        <div class='field'>
+        <div class='labeled-field'>
             <label for='field1'>A label</label>
             <input type='text' name='field1' />
         </div>
-        <div class='field'>
+        <div class='labeled-field'>
             <label for='field1'>A much longer field label1</label>
             <textarea name='field2'></textarea>
         </div>
