--- a/WD-400/html/forms/form-basic.html
+++ b/WD-400/html/forms/form-basic.html
@@ -41,6 +41,23 @@
             <label for="radioC">Choice C</label>
         </div>
 
+        <div>
+            <label for="textLinesId">Text Area</label>
+            <textarea class='aladin' name="textLinesName" id="textLinesId" style='width:500px; height:6rem'></textarea>
+        </div>
+
+        <div>
+            <label for="dropdownId">Select (Drop down menu)</label>
+            <select  class='roboto' name="dropDownname" id="dropdownId">
+                <option value="" selected>Choose from below...</option>
+                <option value="a">Choice a</option>
+                <option value="b">Choice b</option>
+                <option value="c">Choice c</option>
+                <option value="d">Choice d</option>
+                <option value="e">Choice e</option>
+            </select>
+        </div>
+
         <input type="hidden" name='hiddenName' value='hiddenValue'>
         <div>
             <input type="submit">
