--- a/basics/google-redirect.html
+++ b/basics/google-redirect.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta http-equiv="refresh" content="5;URL='http://google.com/'" />
+    <!-- <meta http-equiv="refresh" content="5; page.htm" /> -->
+
     <title>Redirect to Google</title>
 </head>
 
