--- a/basics/block-elements.html
+++ b/basics/block-elements.html
@@ -11,11 +11,12 @@
 <body>
     <h1>Basic block elements</h1>
     <p>A paragraph.</p>
+
     <h2>An H2 heading</h2>
     <h3>An H3 heading</h3>
     <h4>H4 is not used much</h4>
     <h5>H5s are not used much at all.</h5>
-    <h6>An H6 is probably used to style a unique heading by overriding the default browser style.</h6>
+    <h6>An H6 is probably used to style a unique heading by overriding this default browser style.</h6>
 
     <h1>List items and more</h1>
     <ul>
@@ -23,18 +24,30 @@
         <li>Unordered list item 2</li>
         <li>Unordered list item 3</li>
     </ul>
+
     <ol>
         <li>Ordered list item 1</li>
         <li>Ordered list item 2</li>
         <li>Ordered list item 3</li>
     </ol>
+
     <dl>
-        <dt>Definition term</dt>
-        <dd>Definition data</dd>
+        <dt>Definition term 1</dt>
+            <dd>Definition data</dd>
+        <dt>Definition term 2</dt>
+            <dd>Definition data</dd>
+        <dt>Definition term 3</dt>
+            <dd>Definition data</dd>
     </dl>
+
     <blockquote><b>Block quote</b> - Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam maxime voluptatem doloremque! Dolorum quo dolores voluptatum placeat esse ducimus a ad eum, magnam? Dolorum nulla sapiente quaerat nesciunt! Ratione, iure.</blockquote>
+
     <h1>Breaks</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> Consequatur quia incidunt odio maiores temporibus iure, <br> soluta veritatis iusto voluptatem. Voluptatem, labore, reprehenderit. <br> Ut officia voluptates doloremque temporibus quas
+    <p>Breaks can be empty elements or open tags alone (valid in HTML5) <br>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br> 
+        Consequatur quia incidunt odio maiores temporibus iure, <br /> 
+        soluta veritatis iusto voluptatem. Voluptatem, labore, reprehenderit. <br /> 
+        Ut officia voluptates doloremque temporibus quas
         suscipit repellendus.</p>
 </body>
 
