--- a/basics/favicon.html
+++ b/basics/favicon.html
@@ -11,6 +11,7 @@
 
 <body>
     <p>Does the icon with my initials appear on the tab?</p>
+    <p>Use a development server like Live Server added to your Code editor to see it.</p>
 </body>
 
 </html>
