--- a/basics/inline-elements.html
+++ b/basics/inline-elements.html
@@ -17,11 +17,26 @@
         <strong>**bold dolor sit amet **bold</strong>,
         <em>italic consectetur adipisicing elit. italic</em> Necessitatibus modi numquam dolorem ut sint et.</p>
     <p>The <abbr title="Overland Park Convention Center">OPCC</abbr> (hover over abbreviation) will be having a convention soon.</p>
-    <p>They will be discussing <dfn title="food items">comestibles</dfn> (hover over defined term) <img src="https://image.freepik.com/iconos-gratis/comestibles_318-110827.jpg" alt="Comestibles"> at the convention.</p>
-    <p>Here is the favicon I use: <img src="../img/favicon-dh.ico" alt="My favicon"></p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione unde quasi et
-        fugiat! <br> Do you like the way that aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> the <sub>sub</sub> tag and aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> the <sup>sup</sup> tag aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> styles text? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione unde quasi
-        et fugiat!<br>
+    <h2>Images</h2>
+    <p>They will be discussing <dfn title="food items">comestibles</dfn> (hover over defined term) <img src="https://image.freepik.com/iconos-gratis/comestibles_318-110827.jpg"
+            alt="Comestibles"> at the convention.</p>
+
+    <p>Here is the favicon I use: <img src="../img/icons/dh.ico" alt="My favicon"></p>
+
+    <p><img src="https://static.pexels.com/photos/7720/night-animal-dog-pet.jpg" alt="my dog" width='300px' style='float:right'>Here
+        is an image of my dog Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem omnis laboriosam iure sapiente
+        officiis officia, repellendus nesciunt aperiam voluptates dolores, in pariatur distinctio deleniti natus consectetur
+        placeat, maiores amet necessitatibus.</p>
+
+    <h2>Breaks, sub, sup</h2>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae
+        voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione
+        unde quasi et fugiat! <br> Do you like the way that aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> the <sub>sub</sub> tag and
+        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+        <br> the <sup>sup</sup> tag aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br> styles text? aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br>        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae quibusdam delectus, sapiente, <br> distinctio molestiae
+        voluptatibus reprehenderit voluptas veritatis officiis, aspernatur dolore nulla. <br> Ea quisquam, soluta ratione
+        unde quasi et fugiat!<br>
     </p>
 </body>
 
