--- a/text/greeting-card.html
+++ b/text/greeting-card.html
@@ -8,7 +8,6 @@
 
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css" />
-    <link rel="stylesheet" href="css/wd-400.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <style>
         @import url('https://fonts.googleapis.com/css?family=Yesteryear');
@@ -25,7 +24,7 @@
         }
         
         .white-shadow {
-            text-shadow: 4px 4px 8px grey
+            text-shadow: 4px 4px 8px grey;
         }
     </style>
 </head>
@@ -33,8 +32,7 @@
 <body>
     <div class='centered-content rem6 bright-color white-shadow xmas-font'>
         <div class='bg-white-glass'>Merry Christmas 2017!!!
-            <div>
-            </div>
+            <div></div>
 
 </body>
 
