--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
 
         <li>CSS3 basics</li>
         <ul>
+            <li><a href="css3/before-after.html">Before and after</a></li>
             <li><a href="css3/black-goose-blog-styled.html">Black goose blog - styled</a></li>
+            <li><a href="css3/black-goose-blog-completed.html">Black goose blog - completed</a></li>
+            <li><a href="css3/color-sampling.html">Color sampling - start</a></li>
+            <li><a href="css3/color-sampling-completed.html">Color sampling - completed</a></li>
         </ul>
 
         <li>Fonts</li>
