--- a/forms/labels-right.html
+++ b/forms/labels-right.html
@@ -5,17 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="../css/wd-400.css">
     <title>Document</title>
     <style>
         .labeled-field {
             margin: 0;
             padding: 0;
-            padding-bottom: 1.25em;
+            padding-bottom: 1.25rem;
         }
         
         .labeled-field label {
             display: inline-block;
-            width: 140px;
+            width: 10rem;
             text-align: right;
             font-weight: bold;
         }
