--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
         <li>Layouts</li>
         <ul>
+            <li><a href="layouts/media-queries.html">Media queries</a></li>
             <li><a href="layouts/grid.html">Grid layout</a></li>
             <li><a href="layouts/flexbox.html">Flexbox</a></li>
             <li><a href="layouts/multi-column.html">Multi-column text with LESS</a></li>
