--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
             <li><a href="layouts/grid.html">Grid layout</a></li>
             <li><a href="layouts/flexbox.html">Flexbox</a></li>
             <li><a href="layouts/multi-column.html">Multi-column text with LESS</a></li>
+
+            <li><a href="layouts/floats.html">Floats</a></li>
+            <li><a href="layouts/menu-horizontal.html">Menu horizontal</a></li>
+            <li><a href="layouts/position.html">Position</a></li>
+            <li><a href="layouts/table-examples.html">Table examples</a></li>
+            <li><a href="layouts/table-tv-schedule.html">TV Schedule</a></li>
+            <li><a href="layouts/table-tv-schedule-complete.html">TV Schedule complete</a></li>
         </ul>
 
     </ul>
