--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>WD-400 home</title> 
+    <title>WD-400 home</title>  
 </head>
 
 <body>
@@ -15,8 +15,7 @@
         <ul>
             <li><a href="basics/google-redirect.html">Google redirect</a></li>
             <li><a href="basics/favicon.html">Favicon</a></li>
-            <li>
-                <a href="basics/html5-boilerplate.html">HTML5 Boilerplate</a>
+            <li><a href="basics/html5-boilerplate.html">HTML5 Boilerplate</a>
             </li>
             <li><a href="basics/normalized-text.html">Normalized text</a></li>
             <li><a href="basics/block-elements.html">Block elements</a></li>
