--- a/basics/inline-elements.html
+++ b/basics/inline-elements.html
@@ -21,7 +21,7 @@
     <p>They will be discussing <dfn title="food items">comestibles</dfn> (hover over defined term) <img src="https://image.freepik.com/iconos-gratis/comestibles_318-110827.jpg"
             alt="Comestibles"> at the convention.</p>
 
-    <p>Here is the favicon I use: <img src="../img/icons/dh.ico" alt="My favicon"></p>
+    <p>Here is the favicon I use: <img src="../images/icons/dh.ico" alt="My favicon"></p>
 
     <p><img src="https://static.pexels.com/photos/7720/night-animal-dog-pet.jpg" alt="my dog" width='300px' style='float:right'>Here
         is an image of my dog Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem omnis laboriosam iure sapiente
