--- a/image-pages/images.html
+++ b/image-pages/images.html
@@ -17,7 +17,7 @@
         </a>
 
     <h2>Locally hosted image</h2>
-    <img src="../img/grumpy-cat.jpg" alt="grumpy cat" style='height: 300px'>
+    <img src="../images/grumpy-cat.jpg" alt="grumpy cat" style='height: 300px'>
 
     <h2>Google search</h2>
     <img src="https://yt3.ggpht.com/-V92UP8yaNyQ/AAAAAAAAAAI/AAAAAAAAAAA/zOYDMx8Qk3c/s900-c-k-no-mo-rj-c0xffffff/photo.jpg" alt="grumpy cat"
