--- a/css-pages/ph-scale.html
+++ b/css-pages/ph-scale.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" href="../img/favicon-dh.ico">
+    <link rel="icon" href="../images/favicon-dh.ico">
     <title>ph-scale</title>
     <style>
         .ph-scale {
