--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
         <li>HTML</li>
         <ul>
-            <li><a href="html/character-entities.html">Character entities</a></li>
-            <li><a href="html/black-goose-blog.txt">Black goose blog text</a></li>
-            <li><a href="html/black-goose-blog.html">Black goose blog - marked up</a></li>
-            <li><a href="html/links-basic.html">Basic links</a></li>
-            <li><a href="html/iframes.html">iframes</a></li>
+            <li><a href="basics/character-entities.html">Character entities</a></li>
+            <li><a href="basics/black-goose-blog.txt">Black goose blog text</a></li>
+            <li><a href="basics/black-goose-blog.html">Black goose blog - marked up</a></li>
+            <li><a href="basics/links-basic.html">Basic links</a></li>
+            <li><a href="basics/iframes.html">iframes</a></li>
         </ul>
 
         <li>Images</li>
