--- a/basics/links-basic.html
+++ b/basics/links-basic.html
@@ -11,9 +11,10 @@
 <body>
     <h1>Basic links</h1>
     <ul>
-        <li><a href="http://www.cnn.com/">CNN</a></li>
-        <li> <a href="https://www.google.com/">Google</a></li>
-        <li> <a href="http://www.kansascity.com/">Kansas City Star</a></li>
+        <li> <a href="http://www.cnn.com/" target='_blank'>CNN</a></li>
+        <li> <a href="https://www.google.com/" target='_blank'>Google</a></li>
+        <li> <a href="http://www.kansascity.com/" target='_blank'>Kansas City Star</a></li>
+        <li> <a href="../index.html" target='_blank'>Home page</a></li>
     </ul>
 </body>
 
