--- a/basics/character-entities.html
+++ b/basics/character-entities.html
@@ -10,10 +10,12 @@
 
 <body>
     <h1>Character entities</h1>
-    <p>As a valued MyPanera<sup>&reg;</sup> member
-        <h2>&#x00BD; off day!</h2>
-        <h1><span style='font-size:300%'>&#10077;</span>This is really quoted.<span style='font-size:300%'>&#10078;</span></h1>
-
+        <!-- characters found and copied from amp-what.com -->
+        <h2>½ off day!</h2>
+        <h1><span style='font-size:300%'>❝</span>This is really quoted.<span
+                style='font-size:300%'>❞</span>
+        </h1>
+        <p>As a valued MyPanera<sup>®</sup> member Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque quidem beatae harum nobis soluta eligendi labore sint eius recusandae consectetur culpa veritatis ipsum officiis inventore cum quis reprehenderit atque explicabo amet ea non dolore, delectus ex! Libero expedita exercitationem veniam necessitatibus minus, sed repellat incidunt nisi ex nihil dolorum sint!</p>
 </body>
 
 </html>
